Removed dependency to velocity.

--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -222,6 +222,12 @@
         <version>${opensaml.version}</version>
         <type>jar</type>
         <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>se.litsec.opensaml</groupId>
+            <artifactId>opensaml3-ext</artifactId>
+          </exclusion>
+        </exclusions>        
       </dependency>
 
       <dependency>
@@ -335,6 +341,12 @@
         <version>${shibboleth.version}</version>
         <type>jar</type>
         <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
