--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -41,8 +41,8 @@
 
   <properties>
     <opensaml.version>3.4.0</opensaml.version>
-    <opensaml-ext.version>1.2.1-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.1-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.2.1</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.1</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.0</shibboleth.version>
     <shibboleth.java-support.version>7.4.0</shibboleth.java-support.version>
