--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -50,8 +50,8 @@
     
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
     <opensaml.version>3.4.0</opensaml.version>
-    <opensaml-ext.version>1.2.1-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.1-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.2.1</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.1</opensaml.swedish-eid.version>
   </properties>
 
   <repositories>
