--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -54,28 +54,25 @@
   </dependencyManagement>
 
   <dependencies>
-
+  
+    <!-- Include newer version of Guava -->
     <dependency>
-      <groupId>se.litsec.opensaml</groupId>
-      <artifactId>opensaml3-ext</artifactId>
-    </dependency>
-     
-    <dependency>
-      <groupId>se.litsec.opensaml.sweid</groupId>
-      <artifactId>swedish-eid-opensaml3</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>se.litsec.sweid.idp</groupId>
-      <artifactId>shibboleth-sweid-extensions</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
       <scope>compile</scope>
     </dependency>
-
-    <!-- For mobile device support -->
+    
+    <!-- Include spring-web 4.3.20 -->
     <dependency>
-      <groupId>org.springframework.mobile</groupId>
-      <artifactId>spring-mobile-device</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <scope>compile</scope>    
+    </dependency>
+    
+    <!-- Include newer version of Bouncy Castle --> 
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>        
       <scope>compile</scope>
     </dependency>
     
@@ -102,7 +99,33 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-joda</artifactId>
       <scope>compile</scope>
+    </dependency>  
+ 
+    <dependency>
+      <groupId>se.litsec.opensaml</groupId>
+      <artifactId>opensaml3-ext</artifactId>
+      <scope>compile</scope>
     </dependency>
+     
+    <dependency>
+      <groupId>se.litsec.opensaml.sweid</groupId>
+      <artifactId>swedish-eid-opensaml3</artifactId>
+      <scope>compile</scope>
+    </dependency>    
+    
+    <dependency>
+      <groupId>se.litsec.sweid.idp</groupId>
+      <artifactId>shibboleth-sweid-extensions</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <!-- For mobile device support -->
+    <dependency>
+      <groupId>org.springframework.mobile</groupId>
+      <artifactId>spring-mobile-device</artifactId>
+      <scope>compile</scope>
+    </dependency>    
 
   </dependencies>
 
@@ -187,12 +210,15 @@
             <id>clean-shib-deps</id>
             <phase>process-resources</phase>
             <configuration>
-              <target name="clean-shib-deps">
-                <echo>Removed vulnerable Jackson dependencies ...</echo>
+              <target name="clean-shib-deps">              
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/guava-20.0.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/bcprov-jdk15on-1.59.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/spring-web-4.3.19.RELEASE.jar" />
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/jackson-annotations-2.8.3.jar" />
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/jackson-core-2.8.3.jar" />
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/jackson-databind-2.8.3.jar" />
                 <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/jackson-datatype-joda-2.8.3.jar" />
+                <delete file="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp/WEB-INF/lib/jsr305-3.0.1.jar" />
               </target>
             </configuration>
             <goals>
