--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0.RC1-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
