Support for PrincipalSelection
Added support for the PrincipalSelection extension.

--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.6.1</version>
+  <version>1.6.2-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -41,8 +41,8 @@
 
   <properties>
     <opensaml.version>3.4.2</opensaml.version>
-    <opensaml-ext.version>1.2.4</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.3</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.2.5</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.4</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.3</shibboleth.version>
     <shibboleth.java-support.version>7.4.2</shibboleth.java-support.version>
