--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.6.2-SNAPSHOT</version>
+  <version>1.7.0-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -40,12 +40,13 @@
   </organization>  
 
   <properties>
-    <opensaml.version>3.4.2</opensaml.version>
-    <opensaml-ext.version>1.2.5</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.4</opensaml.swedish-eid.version>
+    <opensaml.version>3.4.3</opensaml.version>
+    <opensaml-security-ext.version>1.0.3</opensaml-security-ext.version>
+    <opensaml-ext.version>1.4.0</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.5-SNAPSHOT</opensaml.swedish-eid.version>
 
-    <shibboleth.version>3.4.3</shibboleth.version>
-    <shibboleth.java-support.version>7.4.2</shibboleth.java-support.version>
+    <shibboleth.version>3.4.4</shibboleth.version>
+    <shibboleth.java-support.version>7.5.0</shibboleth.java-support.version>
     <shibboleth.spring-extensions.version>5.4.1</shibboleth.spring-extensions.version>
 
     <spring.version>4.3.19.RELEASE</spring.version>
@@ -56,7 +57,7 @@
     <spring.webflow.version>2.4.8.RELEASE</spring.webflow.version>
     <spring.mobile.version>1.1.5.RELEASE</spring.mobile.version>
     
-    <jackson.version>2.9.8</jackson.version>
+    <jackson.version>2.9.9</jackson.version>
 
     <slf4j.version>1.7.25</slf4j.version>
     <junit.version>4.12</junit.version>
@@ -153,6 +154,14 @@
 
       <!-- OpenSAML extensions -->
       <dependency>
+        <groupId>se.swedenconnect.opensaml</groupId>
+        <artifactId>opensaml-security-ext</artifactId>
+        <version>${opensaml-security-ext.version}</version>
+        <type>jar</type>
+        <scope>provided</scope>
+      </dependency>
+          
+      <dependency>
         <groupId>se.litsec.opensaml</groupId>
         <artifactId>opensaml3-ext</artifactId>
         <version>${opensaml-ext.version}</version>
@@ -176,10 +185,17 @@
 
       <!-- OpenSAML -->
       <dependency>
+        <groupId>se.swedenconnect.opensaml</groupId>
+        <artifactId>opensaml-bom</artifactId>
+        <version>${opensaml.version}.R2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      
+      <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-core</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -187,7 +203,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-messaging-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -195,7 +210,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-messaging-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -203,7 +217,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-profile-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -211,7 +224,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-profile-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -219,7 +231,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-saml-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -227,21 +238,13 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-saml-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-          </exclusion>
-        </exclusions>        
       </dependency>
 
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-security-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -249,7 +252,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-security-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -257,7 +259,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-soap-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -265,21 +266,13 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-soap-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-          </exclusion>
-        </exclusions>        
       </dependency>
 
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-storage-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -287,54 +280,13 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-storage-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <!-- https://snyk.io/vuln/SNYK-JAVA-DOM4J-72444 -->
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-xacml-api</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-xacml-impl</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-xacml-saml-api</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-xacml-saml-impl</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-xmlsec-api</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -342,7 +294,6 @@
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-xmlsec-impl</artifactId>
         <version>${opensaml.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
@@ -351,7 +302,6 @@
         <groupId>net.shibboleth.utilities</groupId>
         <artifactId>java-support</artifactId>
         <version>${shibboleth.java-support.version}</version>
-        <type>jar</type>
         <scope>provided</scope>
       </dependency>
 
