DIGG-43 Updated Shibboleth version
Also fixes for algorithm defaults.

--- a/shibboleth-base/idp/src/main/resources/conf/idp.properties
+++ b/shibboleth-base/idp/src/main/resources/conf/idp.properties
@@ -81,11 +81,23 @@ idp.security.requireAuthnRequestsSigned=false
 # Sets the bean ID to use as a default security configuration set
 #idp.security.config = shibboleth.DefaultSecurityConfiguration
 
+# Assign the bean that should be used to setup the OpenSAML defaults
+# Possible beans are:
+# - sweid.SwedishEidSecurityConfiguration (default) - For settings according to the Swedish eID Framework
+# - sweid.SAML2IntSecurityConfiguration - For settings according to SAML2Int
+# - sweid.DefaultSecurityConfiguration - Default settings according to OpenSAML with extensions for RSA-PSS and key agreement
+# - sweid.OpenSAMLSecurityConfiguration - OpenSAML defaults
+#
+# idp.security.default-security-configuration-bean = sweid.SwedishEidSecurityConfiguration
+
 # To default to SHA-1, set to shibboleth.SigningConfiguration.SHA1
 #idp.signing.config = shibboleth.SigningConfiguration.SHA256
+idp.signing.config = sweid.SigningConfiguration
 
 # To upgrade to AES-GCM encryption, set to shibboleth.EncryptionConfiguration.GCM
 #idp.encryption.config = shibboleth.EncryptionConfiguration.CBC
+idp.encryption.config = sweid.EncryptionConfiguration
+
 
 # Configures trust evaluation of keys used by services at runtime
 # Defaults to supporting both explicit key and PKIX using SAML metadata.
