Updated dependency to opensaml-swedish-eid

--- a/shibboleth-base/shibboleth-extensions/pom.xml
+++ b/shibboleth-base/shibboleth-extensions/pom.xml
@@ -73,6 +73,11 @@
       <groupId>org.springframework.webflow</groupId>
       <artifactId>spring-webflow</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>se.swedenconnect.opensaml</groupId>
+      <artifactId>opensaml-security-ext</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>se.litsec.opensaml</groupId>
