--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -43,7 +43,7 @@
     <opensaml.version>3.4.3</opensaml.version>
     <opensaml-security-ext.version>1.0.3</opensaml-security-ext.version>
     <opensaml-ext.version>1.4.0</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.5-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml.swedish-eid.version>1.3.0</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.4</shibboleth.version>
     <shibboleth.java-support.version>7.5.0</shibboleth.java-support.version>
@@ -167,6 +167,12 @@
         <version>${opensaml-ext.version}</version>
         <type>jar</type>
         <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>se.swedenconnect.opensaml</groupId>
+            <artifactId>opensaml-security-ext</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -176,6 +182,10 @@
         <type>jar</type>
         <scope>provided</scope>
         <exclusions>
+          <exclusion>
+            <groupId>se.swedenconnect.opensaml</groupId>
+            <artifactId>opensaml-security-ext</artifactId>
+          </exclusion>
           <exclusion>
             <groupId>se.litsec.opensaml</groupId>
             <artifactId>opensaml3-ext</artifactId>
