--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -50,7 +50,7 @@
     <opensaml.version>3.4.3</opensaml.version>
     <opensaml-security-ext.version>1.0.3</opensaml-security-ext.version>
     <opensaml-ext.version>1.4.0</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.5-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml.swedish-eid.version>1.3.0</opensaml.swedish-eid.version>
     
   </properties>
 
