--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.7.0</version>
+  <version>1.7.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -42,7 +42,7 @@
   <properties>
     <opensaml.version>3.4.3</opensaml.version>
     <opensaml-security-ext.version>1.0.3</opensaml-security-ext.version>
-    <opensaml-ext.version>1.4.0</opensaml-ext.version>
+    <opensaml-ext.version>1.4.1</opensaml-ext.version>
     <opensaml.swedish-eid.version>1.3.0</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.4</shibboleth.version>
