--- a/shibboleth-base/pom.xml
+++ b/shibboleth-base/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.7.0</version>
+  <version>1.7.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -49,7 +49,7 @@
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
     <opensaml.version>3.4.3</opensaml.version>
     <opensaml-security-ext.version>1.0.3</opensaml-security-ext.version>
-    <opensaml-ext.version>1.4.0</opensaml-ext.version>
+    <opensaml-ext.version>1.4.1</opensaml-ext.version>
     <opensaml.swedish-eid.version>1.3.0</opensaml.swedish-eid.version>
     
   </properties>
